[package]
name = "public"
version = "0.1.0"
authors = ["yuchunzhou <chunzhou.yu@qq.com>"]
edition = "2018"
keywords = ["struct", "proc-macro-attribute"]
license = "Apache-2.0"
repository = "https://github.com/yuchunzhou/public"
description = "a attribute macro to make struct's fields public"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
proc-macro = true